--- a/index.html
+++ b/index.html
@@ -93,17 +93,25 @@
 <script type="importmap">
 {
   "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-    "recharts": "https://esm.sh/recharts@^3.7.0",
+    "react": "https://esm.sh/react@^19.2.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4"
+    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
+    "recharts": "https://esm.sh/recharts@^3.7.0"
   }
 }
 </script>
 </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <!-- Fallback loading UI to confirm HTML loaded correctly -->
+      <div style="display: flex; justify-content: center; align-items: center; height: 100vh; font-family: sans-serif; color: #666;">
+        <div style="text-align: center;">
+          <div style="font-size: 24px; margin-bottom: 10px;">Đang tải ứng dụng...</div>
+          <div style="font-size: 14px;">Vui lòng đợi trong giây lát.</div>
+        </div>
+      </div>
+    </div>
     <script type="module" src="index.tsx"></script>
   </body>
 </html>
